2017-01-28  Markus Gans  <guru.mail@muenster.de>
	* Allow to change the focus out from FScrollView to another widget

2017-01-26  Markus Gans  <guru.mail@muenster.de>
	* FScrollView now scrolls automatically to the focused widget

2017-01-22  Markus Gans  <guru.mail@muenster.de>
	* A FScrollView object can now have client widgets 
	  on the scrolling area

2017-01-15  Markus Gans  <guru.mail@muenster.de>
	* Virtual window gets a preprocessing handler. This allows 
	  a preprocessing method to be called before the vterm is updated.

2017-01-07  Markus Gans  <guru.mail@muenster.de>
	* Add scrollTo and scrollBy methods to FScrollView

2017-01-03  Markus Gans  <guru.mail@muenster.de>
	* FScrollView now has on-demand scroll bars
	* Arrow keys support for FScrollView viewport scrolling

2017-01-02  Markus Gans  <guru.mail@muenster.de>
	* The new FScrollView widget provides a scrollable viewport 
	  to change the area of interest
	* The scrollview example illustrates the use of FScrollView class

2016-12-28  Markus Gans  <guru.mail@muenster.de>
	* Reduce public methods in FVTerm

2016-12-27  Markus Gans  <guru.mail@muenster.de>
	* Avoid non-working tab-cursor-movements on Linux terminals
	  with activated PC or VT100 encoding

2016-12-26  Markus Gans  <guru.mail@muenster.de>
	* Add the ability to stream text into a widget's virtual window
	  with print() << '#' << 5; or *this << ...

2016-12-22  Markus Gans  <guru.mail@muenster.de>
	* VTerm marks printed characters for a correct determination 
	  of unchanged characters
	* Correct gpm detection in configure script

2016-12-18  Markus Gans  <guru.mail@muenster.de>
	* Only perform VTerm updates on terminal updates
	* Skipping the print of characters without changes
	* Combined scrollAreaForward and scrollAreaReverse 
	  with terminal scroll sequences

2016-12-15  Markus Gans  <guru.mail@muenster.de>
	* Reduce the character output by using character erase 
	  and character repeat
